# ai-flash-knowledge

./: .dockerignore  .env.example  .gitignore  HANDOFF_FOR_CLAUDE_CODE.md  README.md  findings.md  progress.md  pyproject.toml  railway.json  render.yaml  requirements.txt  task_plan.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  image_answer.py  llm.py  main.py  models.py  notion.py  service.py  telegram.py  transcription.py  utils.py
docs/: deploy-google-cloud-run.md  deploy-railway.md  deploy-render-free.md  setup-checklist.md
scripts/: check_integrations.py  set_telegram_webhook.py  show_telegram_updates.py  smoke_test_write.py
tests/: test_telegram.py  test_utils.py
